--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
         <header>
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
                 <div class="container">
-                    <a class="navbar-brand" href="/Home/Index">Clicker</a>
+                    <a class="navbar-brand clicker-logo" href="/Home/Index">Clicker</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -27,13 +27,15 @@
                                 <a class="nav-link text-dark" href="/Play/Index">Play</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" href="/Leaderboard/Index/time=0&page=0">Leaderboard</a>
+                                <a class="nav-link text-dark" href="/Leaderboard/Index">Leaderboard</a>
+                            </li>
+                            <li>
+                                <form class="form-group input-group" style="margin-left: 80px;" method="GET" action="/Users/User" id="navbar-search-form">
+                                    <input class="form-control" style="font-family:sans-serif;" type="search" placeholder="Search User" aria-label="Search" name="username">
+                                    <button class="btn btn-outline-success" type="submit">Search</button>
+                                </form>
                             </li>
                         </ul>
-                        <form class="form-group input-group mx-auto" method="GET" action="/Users/User" id="navbar-search-form">
-                            <input class="form-control" style="font-family:sans-serif;" type="search" placeholder="Search User" aria-label="Search" name="username">
-                            <button class="btn btn-outline-success" type="submit">Search</button>
-                        </form>
                     </div>
                     <partial name="_LoginPartial"/>
                 </div>
