Results page bugfix

--- a/Views/Play/Results.cshtml
+++ b/Views/Play/Results.cshtml
@@ -70,7 +70,7 @@
             },
             success: function (response) {
                 console.log("Score saved successfully");
-                //window.location.href = "/Play/Index";
+                window.location.href = "/Play/Index";
             },
             error: function (error) {
                 console.error("Error saving score: ", error);
