Made results persistent until retrying or saving

--- a/Views/Play/Results.cshtml
+++ b/Views/Play/Results.cshtml
@@ -91,6 +91,6 @@
     }
 
     function retry() {
-        window.location.href = "/Play/Index";
+        window.location.href = "/Play/Retry";
     }
 </script>
